--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 #Definir qual a porta que api irá executar
 server.port=8090
 
+#Para habilitar liveReload do SpringTool, antes deve configurar no pom.xml a dependencia spring-boot-devtools 
+spring.devtools.restart.enabled=true
 
 #Dados para Configurar conexao/BD H2
 spring.datasource.url=jdbc:h2:mem:db
